[package]
name = "stun3489"
version = "0.5.0"
authors = ["Manuel Schölling <manuel.schoelling@gmx.de>"]
homepage = "https://github.com/manuels/stun3489"
description = "An implementation of STUN (RFC 3489) using tokio"
license = "GPL-2.0"
edition = "2018"
documentation = "https://docs.rs/stun3489"
repository = "https://github.com/manuels/stun3489"

[dependencies]
byteorder = "1.2"
bytes = "0.5"
futures = "0.3"
log = "0.4"
rand = { version = "0.7", features = ["small_rng"] }

[dev-dependencies]
async-std = { version = "1.4", features = ["unstable"] }
env_logger = "0.7"
nix = "0.17"
